# FTPBOI

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
docs/: README.md  bridge-e2e-checklist.md  technical-debt.md  verification-report.md
docs/architecture/: module-map.md  overview.md
docs/features/: status.md
docs/protocols/: ftp-vs-sftp.md
docs/roadmap/: scalability-and-testing.md
docs/security/: credentials-and-master-password.md  error-handling.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection_manager.rs  file_ops.rs  lib.rs  main.rs  master_vault.rs  models.rs  settings.rs  transfer_hub.rs  trust_store.rs  vault.rs
src/components/command/: command-palette.tsx
src/components/feedback/: collision-modal.tsx  confirm-action-modal.tsx  delete-confirmation-modal.tsx  local-folder-picker-modal.tsx  master-password-modal.tsx  mitm-alert-modal.tsx  plain-ftp-warning-modal.tsx  remote-edit-upload-modal.tsx  toast-container.tsx  untrusted-certificate-modal.tsx
src/components/files/: context-menu.tsx  file-browser-types.ts  file-browser-utils.ts  file-browser.tsx  file-table.tsx  local-file-browser.tsx
src/components/layout/: log-drawer.tsx  sidebar.tsx
src/hooks/: use-connections.ts  use-create-menu-outside-click.ts  use-inline-edit-preview.ts  use-local-listing.ts  use-remote-listing.ts  use-transfer-hub.ts
src/lib/: utils.ts
src/services/: contracts.ts  tauri-client.ts
src/store/: connection-store.ts  security-store.ts  settings-store.ts  toast-store.ts  transfer-store.ts
(+3 files in other folders)
