[package]
name = "fz-next"
version = "0.1.0"
description = "FZ-Next: modern FTP/SFTP desktop client"
authors = ["patrickpiper"]
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fz_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
keyring = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
suppaftp = { version = "6", features = ["native-tls"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"

